--- a/src/components/hero/hero.html
+++ b/src/components/hero/hero.html
@@ -5,6 +5,7 @@
             <div class="col"><img src="./img/blueberries.png" alt="picture"></div>
         </div>
         <div class="row">
+            <div class="col"><p>Hello world!!!</p></div>
             <div class="col text-center"><button class="btn">Press me!</button></div>
         </div>
     </div>
